feat: add execute command and endpoint
