# api/openapi.yaml
@@ -37,6 +37,22 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/UploadResponse'
+  /execute/{functionId}:
+    post:
+      operationId: ExecuteLambda
+      parameters:
+        - name: functionId
+          in: path
+          required: true
+          schema:
+            type: string
+      responses:
+        "200":
+          description: OK
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/ExecuteResponse'
 
 components:
   schemas:
@@ -47,6 +63,12 @@ components:
         status:
           type: string
     UploadResponse:
+      type: object
+      required: [ status ]
+      properties:
+        status:
+          type: string
+    ExecuteResponse:
       type: object
       required: [ status ]
       properties:
